[metadata]
name = pyppspec
version = 0.1.6.1
author = Ben Campbell
author_email = ben.campbell@unh.edu
description = For preforming all-electronic pump-probe spectroscopy with a scanning tunneling microscope.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhc1010/ppspectroscopy
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True